# 22xt_sw

./: .gitignore  .gitmodules
firmware/esp_idf/: .gitignore
firmware/esp_idf/components/ads1120/: ads1120.cpp
firmware/esp_idf/components/mqtt_manager/include/: mqttManager.hpp
firmware/esp_idf/components/ntp_manager/ntp_udp_client/: CMakeLists.txt  ntp_udp_client.c
firmware/esp_idf/components/ntp_manager/ntp_udp_client/include/: ntp_udp_client.h
firmware/esp_idf/components/ntp_manager/ntp_udp_server/: CMakeLists.txt  ntp_udp_server.c
firmware/esp_idf/components/ntp_manager/ntp_udp_server/include/: ntp_udp_server.h
firmware/esp_idf/components/udp_client/: CMakeLists.txt  socket_handler.cpp  udp_client.cpp
firmware/esp_idf/components/udp_client/include/: socket_handler.hpp  udp_client.hpp
firmware/esp_idf/components/w25n04kv/: w25n04kv.cpp
firmware/esp_idf/components/w25n04kv/include/: w25n04kv.hpp
firmware/esp_idf/test/ads1120_test/: CMakeLists.txt
firmware/esp_idf/test/ntp_udp_test/ntp_udp_client/main/: main.c  udp_client.c
firmware/esp_idf/test/ntp_udp_test/ntp_udp_server/: CMakeLists.txt
firmware/esp_idf/test/ntp_udp_test/ntp_udp_server/main/: CMakeLists.txt  main.c  udp_server.c
firmware/esp_idf/test/udp_client_test/: CMakeLists.txt
firmware/esp_idf/test/udp_client_test/main/: main.cpp
firmware/esp_idf/test/w25n04kv_test/: CMakeLists.txt
firmware/esp_idf/test/w25n04kv_test/components/test/: test.cpp
firmware/esp_idf/test/w25n04kv_test/main/: main.cpp
